  - source moved into src/Interfaces
  - implementation of JNI functions now included in Ipopt library
  - Java class and Jar build by normal build and installed as org.coinor.ipopt.jar
  - examples moved into examples/*_java
  - test executed by make test
  - to build javadoc, run make javadoc
  - use --disable-java to disable check for java and build of Java interface
- sIpopt is now build and installed together with Ipopt, use --disable-sipopt to disable
- IPOPT_THREAD_LOCAL now uses C++11's thread_local keyword if C++11 is available
- header files are now installed in $prefix/include/coin-or instead of $prefix/include/coin
- removed addlibs files, use pkg-config instead
- under Windows/Msys2, DLLs are now build by default
- default --prefix no longer changed, thus should now default to /usr/local
- check for Fortran can be disabled via --disable-f77
- easier build without Fortran compiler
- Lapack is no longer optional, but required; separate check for Blas removed
- Ipopt and sIpopt interface functions are now declared with
  visibility(default)-attribute (if GCC/CLANG), thus building Ipopt with
  -fvisibility=hidden still produces a usable library
- Ipopt and sIpopt interface functions are now declared with dllimport-attribute
  (if MSVC), so that an Ipopt C++ DLL can be used
- removed --enable-debug-ipopt


2019-04-08 releases/3.12.13
        - fixed Pardiso settings when using Pardiso from Pardiso project
          website (by Olaf Schenk): the new settings should provide much
          better performance; the default for option pardiso_order changed
          from five to metis
        - changed distinction of MKL and Basel Pardiso in configure: to
          use MKL Pardiso, only specify MKL for Blas; to use Basel Pardiso,
          use --with-pardiso

2018-11-17 releases/3.12.12
        - allow for --without-matlab-home to disable check for Matlab [r2748]
        - add dppsv to v8-ifort [r2746]