@@ -22,6 +22,8 @@ history management of subversion.
   - test executed by make test
   - to build javadoc, run make javadoc
   - use --disable-java to disable check for java and build of Java interface
+  - removed DLLPATH and DLLNAME and added constructors that works without arguments
+    and with only one argument (specifying the Ipopt library namestem)
 - sIpopt is now build and installed together with Ipopt, use --disable-sipopt to disable
 - IPOPT_THREAD_LOCAL now uses C++11's thread_local keyword if C++11 is available
 - header files are now installed in $prefix/include/coin-or instead of $prefix/include/coin
@@ -36,7 +38,9 @@ history management of subversion.
   -fvisibility=hidden still produces a usable library
 - Ipopt and sIpopt interface functions are now declared with dllimport-attribute
   (if MSVC), so that an Ipopt C++ DLL can be used
-- removed --enable-debug-ipopt
+- --enable-debug does not imply --disable-shared anymore
+- removed --enable-debug-ipopt, --enable-debug does similar now
+- removed ADD/OPT/DBG_C/CXX/F77FLAGS
 
 
 2019-04-08 releases/3.12.13
